# msu

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
src/: agent.py  chain.py  const.py  custom_context.txt  custom_memory.py  custom_prompt.py  default_context.txt  invoke_streamlit.py  main.py  prompt.py  sandbox.py  sql_database_chain_executor.py  test_ui.py
src/components/: chain.py  custom_memory.py  custom_prompt.py  message.py  message_manager.py  patched_database_class.py  patched_sql_chain.py  sql_database_chain_executor.py  supabase_repository.py
src/models/: test.py  test_set.py
src/testing/: main.py  q_test.txt  tests.py
src/testing/models/: question.py  test.py  test_set.py
src/tools/: console_chat.py  converter.py  interrogator.py  sandbox.py  testing_suit.py
src/utils/: exclude_keys.py
