[tool.poetry]
name = "msu"
version = "0.1.0"
description = ""
authors = ["Dmitry Bleschunov <bleshunov5b@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit-chat = "^0.0.2.2"
langchain = "^0.0.173"
psycopg2 = "^2.9.6"
openai = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
